Zapis / odczyt danych aplikacji

--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,12 @@
             <artifactId>xstream</artifactId>
             <version>1.4.19</version>
         </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itext7-core</artifactId>
+            <version>7.2.1</version>
+            <type>pom</type>
+        </dependency>
     </dependencies>
 
     <build>
